--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,26 +2,31 @@ name: surfie
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
+    branches: 
+    - main
 jobs:
-  laravel-tests:
-
+  web-deploy:
+  name: Deploy
     runs-on: ubuntu-latest
 
     steps:
+      name: Get the latest code
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.0'
+        server: ${{ secrets.ftp_server}}
+         username: ${{ secrets.ftp_username}}
+         password: ${{ secrets.ftp_password}}
+
     - uses: actions/checkout@v3
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer update --ignore-platform-reqs
     - name: Generate key
       run: php artisan key:generate
+      name: Generate storage link
+      run: php artisan storage link
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
@@ -30,6 +35,6 @@ jobs:
         touch surfie/surfie.sqlite
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
-        DB_CONNECTION: sqlite
+        DB_CONNECTION: surfie
         DB_DATABASE: surfie/surfie.sqlite
       run: vendor/bin/phpunit
