--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  laravel-tests:
+  laravel-deploy:
 
     runs-on: ubuntu-latest
 
@@ -19,17 +19,25 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer update --ignore-platform-reqs
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
+    - name: sync files
+      uses: shivammathur/FTP-Deploy-Actions@4.0.0
+      with: 
+         server: ${{ secrets.ftp_server}}
+         username: ${{ secrets.ftp_username}}
+         password: ${{ secrets.ftp_password}}
+
+
     - name: Create Database
       run: |
-        mkdir -p database
-        touch database/database.sqlite
+        mkdir -p surfie
+        touch surfie/surfie.sqlite
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
+        DB_DATABASE: surfie/surfie.sqlite
       run: vendor/bin/phpunit
