--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,43 +1,30 @@
-name: Laravel
-
+name: Deploy Laravel Project on push
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
+    branches:
+      - main
 jobs:
-  laravel-deploy:
-
+  web-deploy:
+    name: Deploy
     runs-on: ubuntu-latest
-
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.0'
-    - uses: actions/checkout@v3
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer update --ignore-platform-reqs
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: sync files
-      uses: shivammathur/FTP-Deploy-Actions@4.0.0
-      with: 
-         server: ${{ secrets.ftp_server}}
-         username: ${{ secrets.ftp_username}}
-         password: ${{ secrets.ftp_password}}
-
-
-    - name: Create Database
-      run: |
-        mkdir -p surfie
-        touch surfie/surfie.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: surfie/surfie.sqlite
-      run: vendor/bin/phpunit
+      - name: Get the latest code
+        uses: actions/checkout@v2.3.2
+      - uses: actions/setup-node@master
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: Install Dependencies
+        run: composer update --ignore-platform-reqs
+      - name: Generate key
+        run: php artisan key:generate
+      - name: Generate storage link
+        run: php artisan storage:link
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: /
