--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,19 +4,13 @@ on:
   push:
     branches: 
     - main
+      pull_request:
+    branches:
+      - production
 jobs:
-  web-deploy:
-  name: Deploy
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      name: Get the latest code
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.0'
-        server: ${{ secrets.ftp_server}}
-         username: ${{ secrets.ftp_username}}
-         password: ${{ secrets.ftp_password}}
-
     - uses: actions/checkout@v3
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
@@ -34,14 +28,3 @@ jobs:
          server: ${{ secrets.ftp_server}}
          username: ${{ secrets.ftp_username}}
          password: ${{ secrets.ftp_password}}
-
-
-    - name: Create Database
-      run: |
-        mkdir -p surfie
-        touch surfie/surfie.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: surfie
-        DB_DATABASE: surfie/surfie.sqlite
-      run: vendor/bin/phpunit
