--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -26,6 +26,13 @@ jobs:
         run: php artisan storage:link
       - name: Set Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
+      - name: Create MySQL Database
+        run: |
+          mysql -e 'CREATE DATABASE afromina_surfie;'
+          cp .env.example .env
+          sed -i 's/DB_DATABASE=laravel/DB_DATABASE=afromina_surfie/g' .env
+          sed -i 's/DB_USERNAME=root/DB_USERNAME='${{ secrets.db_username }}'/g' .env
+          sed -i 's/DB_PASSWORD=/DB_PASSWORD='${{ secrets.db_password }}'/g' .env
       - name: Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.1.1
         with: 
@@ -36,6 +43,6 @@ jobs:
         env:
           DB_CONNECTION: mysql
           DB_DATABASE: afromina_surfie
-          DB_USERNAME: afromina_surfieuser
-          DB_PASSWORD: lU5Hi8M]Jdzi
+          DB_USERNAME: ${{ secrets.db_username }}
+          DB_PASSWORD: ${{ secrets.db_password }}
         run: vendor/bin/phpunit
