--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,46 +2,47 @@ name: surfie
 
 on:
   push:
-    branches: 
-    - main
+    branches:
+      - main
+
 jobs:
   web-deploy:
-  name: Deploy
+    name: Deploy
     runs-on: ubuntu-latest
     steps:
-      name: Get the latest code
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.0'
-        server: ${{ secrets.ftp_server}}
-         username: ${{ secrets.ftp_username}}
-         password: ${{ secrets.ftp_password}}
-
-    - uses: actions/checkout@v3
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer update --ignore-platform-reqs
-    - name: Generate key
-      run: php artisan key:generate
-      name: Generate storage link
-      run: php artisan storage link
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: sync files
-      uses: shivammathur/FTP-Deploy-Actions@4.0.0
-      with: 
-         server: ${{ secrets.ftp_server}}
-         username: ${{ secrets.ftp_username}}
-         password: ${{ secrets.ftp_password}}
-
-
-    - name: Create Database
-      run: |
-        mkdir -p surfie
-        touch surfie/surfie.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: surfie
-        DB_DATABASE: surfie/surfie.sqlite
-      run: vendor/bin/phpunit
+      - name: Get the latest code
+        uses: actions/checkout@v2
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.0"
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: Install Dependencies
+        run: composer update --ignore-platform-reqs
+      - name: Generate key
+        run: php artisan key:generate
+      - name: Generate storage link
+        run: php artisan storage:link
+      - name: Set Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+      - name: Create MySQL Database
+        run: |
+          mysql -e 'CREATE DATABASE afromina_surfie;'
+          cp .env.example .env
+          sed -i 's/DB_DATABASE=laravel/DB_DATABASE=afromina_surfie/g' .env
+          sed -i 's/DB_USERNAME=root/DB_USERNAME='${{ secrets.db_username }}'/g' .env
+          sed -i 's/DB_PASSWORD=/DB_PASSWORD='${{ secrets.db_password }}'/g' .env
+      - name: Sync files
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        with:
+          server: ${{ secrets.ftp_server }}
+          username: ${{ secrets.ftp_username }}
+          password: ${{ secrets.ftp_password }}
+      - name: Execute tests (Unit and Feature tests) via PHPUnit
+        env:
+          DB_CONNECTION: mysql
+          DB_DATABASE: afromina_surfie
+          DB_USERNAME: ${{ secrets.db_username }}
+          DB_PASSWORD: ${{ secrets.db_password }}
+        run: vendor/bin/phpunit
