--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get the latest code
-        uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869
+        uses: shivammathur/setup-php@v3
         with:
           php-version: "8.0"
       - name: Copy .env
@@ -35,7 +35,7 @@ jobs:
           sed -i 's/DB_USERNAME=root/DB_USERNAME='${{ secrets.db_username }}'/g' .env
           sed -i 's/DB_PASSWORD=/DB_PASSWORD='${{ secrets.db_password }}'/g' .env
       - name: Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.1.1
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
           server: ${{ secrets.ftp_server }}
           username: ${{ secrets.ftp_username }}
