--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,4 @@
-name: surfie
+name: Deploy to FTP Server
 
 on:
   push:
@@ -6,43 +6,29 @@ on:
       - main
 
 jobs:
-  web-deploy:
-    name: Deploy
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Get the latest code
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Setup PHP
-        uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869
+        uses: shivammathur/setup-php@v2
         with:
-          php-version: "8.0"
-      - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      - name: Install Dependencies
-        run: composer update --ignore-platform-reqs
-      - name: Generate key
-        run: php artisan key:generate
-      - name: Generate storage link
-        run: php artisan storage:link
-      - name: Set Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
-      - name: Create MySQL Database
-        run: |
-          mysql -e 'CREATE DATABASE afromina_surfie;'
-          cp .env.example .env
-          sed -i 's/DB_DATABASE=laravel/DB_DATABASE=afromina_surfie/g' .env
-          sed -i 's/DB_USERNAME=root/DB_USERNAME='${{ secrets.db_username }}'/g' .env
-          sed -i 's/DB_PASSWORD=/DB_PASSWORD='${{ secrets.db_password }}'/g' .env
-      - name: Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+          php-version: "7.4"
+
+      - name: Install dependencies
+        run: composer install --no-dev
+
+      - name: Build assets
+        run: php artisan mix --production
+
+      - name: Deploy to FTP
+        uses: SamKirkland/FTP-Deploy-Action@3.1.1
         with:
-          server: ${{ secrets.ftp_server }}
-          username: ${{ secrets.ftp_username }}
-          password: ${{ secrets.ftp_password }}
-      - name: Execute tests (Unit and Feature tests) via PHPUnit
-        env:
-          DB_CONNECTION: mysql
-          DB_DATABASE: afromina_surfie
-          DB_USERNAME: ${{ secrets.db_username }}
-          DB_PASSWORD: ${{ secrets.db_password }}
-        run: vendor/bin/phpunit
+          server: ftp.afromina-digitals.com
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./public
+          remote-dir: /public_html
