--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,34 +1,23 @@
-name: Deploy to FTP Server
+name: Laravel
 
 on:
   push:
-    branches:
-      - main
+    - main
 
 jobs:
-  deploy:
+  laravel-tests:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
         with:
-          php-version: "7.4"
-
-      - name: Install dependencies
-        run: composer install --no-dev
-
-      - name: Build assets
-        run: php artisan mix --production
-
-      - name: Deploy to FTP
-        uses: SamKirkland/FTP-Deploy-Action@3.1.1
-        with:
-          server: ftp.afromina-digitals.com
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./public
-          remote-dir: /public_html
+          php-version: "8.0"
+      - uses: actions/checkout@v3
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: Install Dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      - name: Generate key
+        run: php artisan key:generate
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
